use string instead of object to prevent cache errors

--- a/app/views/user_mailer/notify_status_change.html.erb
+++ b/app/views/user_mailer/notify_status_change.html.erb
@@ -3,7 +3,7 @@
 </p>
 
 <p>
-  The class <b><%= @course.course %></b> that you've subscribed has changed its status from <b><%= @origin_status %></b> to <b><%= @course.status %></b>.
+  The class <b><%= @course.course %></b> that you've subscribed has changed its status from <b><%= @origin_status %></b> to <b><%= @current_status %></b>.
 </p>
 
 <p>
