--- a/app/views/user_mailer/notify_status_change.html.erb
+++ b/app/views/user_mailer/notify_status_change.html.erb
@@ -3,9 +3,25 @@
 </p>
 
 <p>
-  The class <b><%= @course.course %></b> that you've subscribed has changed its status from <b><%= @origin_status %></b> to <b><%= @current_status %></b>.
+  The course that you've subscribed:
+</p>
+
+<ul>
+  <li>Course: <%= @course.course %></li>
+  <li>Instructor: <%= @lecture.instructor %></li>
+  <li>Days: <%= @lecture.days %></li>
+  <li>Times: <%= @lecture.times %></li>
+</ul>
+
+<p>
+  has changed its status from <b><%= @origin_status %></b> to <b><%= @current_status %></b>.
+</p>
+
+<p>
+  If you wish to unsubscribe, go to our <a href="https://www.daclassplanner.com" target="_blank">website</a> and click the Subscribed tag to unsubscribe.
 </p>
 
 <p>
   **This email is sent by the system. Please do not reply.**
 </p>
+
