update website link in email

--- a/app/views/user_mailer/notify_status_change.html.erb
+++ b/app/views/user_mailer/notify_status_change.html.erb
@@ -18,7 +18,7 @@
 </p>
 
 <p>
-  If you wish to unsubscribe, go to our <a href="https://www.daclassplanner.com" target="_blank">website</a> and click the Subscribed tag to unsubscribe.
+  If you wish to unsubscribe, go to our <a href="https://enrollment.plus" target="_blank">website</a> and click My List on the side menu to unsubscribe.
 </p>
 
 <p>
