--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,25 +1,50 @@
-<h2>Change your password</h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" href="https://www.enrollment.plus/favicon.ico">
+  <title>Enrollment Plus</title>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
-  <%= f.hidden_field :reset_password_token %>
+  <!-- css -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.4/css/bulma.min.css">
+</head>
+<body>
+  <section class="section">
+    <div class="container">
+      <div class="columns">
+        <div class="column is-4 is-offset-4">
+          <h2 class="title">Change your password</h2>
 
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
-    <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "new-password" %>
-  </div>
+          <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+            <div class="notification is-warning">
+              <div class="content is-small">
+                <%= devise_error_messages! %>
+              </div>
+            </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
+            <%= f.hidden_field :reset_password_token %>
 
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
-<% end %>
+            <div class="field">
+              <%= f.label :password, "New password", class: 'label' %>
+              <%= f.password_field :password, autofocus: true, autocomplete: "new-password", class: 'input' %>
+              <% if @minimum_password_length %>
+                <p class="help">(<%= @minimum_password_length %> characters minimum)</p>
+              <% end %>
+            </div>
 
-<%= render "devise/shared/links" %>
+            <div class="field">
+              <%= f.label :password_confirmation, "Confirm new password", class: 'label' %>
+              <%= f.password_field :password_confirmation, autocomplete: "off", class: 'input' %>
+            </div>
+
+            <div class="field">
+              <%= f.submit "Change my password", class: 'button is-primary' %>
+            </div>
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </section>
+</body>
+</html>
